tests/ui/foreign_and.stderr
Error [E0012]: Jet writes "and" as `&&`
  --> tests/ui/foreign_and.jet:2:20
    |
  2 |     val ok = 1 > 0 and 2 > 1;
    |                    ^^^
 Why: logic uses the symbols `&&`, `||`, and `!`
 Fix: replace `and` with `&&`
