tests/ui/foreign_and.jet
fn main() {
    val ok = 1 > 0 and 2 > 1;
    print(ok);
}
